--- a/assets/less/modules/log.less
+++ b/assets/less/modules/log.less
@@ -52,6 +52,7 @@
       &.log-entry-type-9  { &:before { background: url("../../img/log/night.gif") } }
       &.log-entry-type-10 { &:before { background: url("../../img/log/home.gif") } }
       &.log-entry-type-11 { &:before { background: url("../../img/log/chat.gif") } }
+      &.log-entry-type-17 { &:before { background: url("../../img/log/well_add.gif") } }
     }
   }
   &+.log-day-select {
