--- a/assets/less/modules/log.less
+++ b/assets/less/modules/log.less
@@ -51,7 +51,26 @@
       &.log-entry-type-8  { &:not(.log-entry-class-2):before { background: url("../../img/log/citizen.gif") } &.log-entry-class-2:before { background: url("../../img/log/death.gif") } }
       &.log-entry-type-9  { &:before { background: url("../../img/log/night.gif") } }
       &.log-entry-type-10 { &:before { background: url("../../img/log/home.gif") } }
-      &.log-entry-type-11 { &:before { background: url("../../img/log/chat.gif") } }
+      &.log-entry-type-11 {
+        &:before { background: url("../../img/log/chat.gif") }
+        div.dice-4, div.dice-6, div.dice-8, div.dice-10, div.dice-12, div.dice-20, div.dice-100, div.letter-a, div.letter-c, div.letter-v,
+        div.rps, div.coin, div.card {
+          display: inline-block; padding: 1px 3px 1px 19px; background: #36241b; font-size: 0.8em; margin: 0 2px;
+        }
+        div.dice-4   { background: url("../../img/forum/dice4.png")   left center no-repeat, #36241b }
+        div.dice-6   { background: url("../../img/forum/dice6.png")   left center no-repeat, #36241b }
+        div.dice-8   { background: url("../../img/forum/dice8.png")   left center no-repeat, #36241b }
+        div.dice-10  { background: url("../../img/forum/dice10.png")  left center no-repeat, #36241b }
+        div.dice-12  { background: url("../../img/forum/dice12.png")  left center no-repeat, #36241b }
+        div.dice-20  { background: url("../../img/forum/dice20.png")  left center no-repeat, #36241b }
+        div.dice-100 { background: url("../../img/forum/dice100.png") left center no-repeat, #36241b }
+        div.letter-a { background: url("../../img/forum/lta.png")     left center no-repeat, #36241b }
+        div.letter-c { background: url("../../img/forum/ltc.png")     left center no-repeat, #36241b }
+        div.letter-v { background: url("../../img/forum/ltv.png")     left center no-repeat, #36241b }
+        div.rps      { background: url("../../img/forum/rps.png")     left center no-repeat, #36241b }
+        div.coin     { background: url("../../img/forum/coin.png")    left center no-repeat, #36241b }
+        div.card     { background: url("../../img/forum/card.png")    left center no-repeat, #36241b }
+      }
       &.log-entry-type-17 { &:before { background: url("../../img/log/well_add.gif") } }
     }
   }
@@ -113,6 +132,24 @@
       &.shout-entry-class-1 {
         b { color: white }
         background-color: #3b3249;
+
+        div.dice-4, div.dice-6, div.dice-8, div.dice-10, div.dice-12, div.dice-20, div.dice-100, div.letter-a, div.letter-c, div.letter-v,
+        div.rps, div.coin, div.card {
+          display: inline-block; padding: 1px 3px 1px 19px; background: #36241b; font-size: 0.8em; margin: 0 2px;
+        }
+        div.dice-4   { background: url("../../img/forum/dice4.png")   left center no-repeat, #36241b }
+        div.dice-6   { background: url("../../img/forum/dice6.png")   left center no-repeat, #36241b }
+        div.dice-8   { background: url("../../img/forum/dice8.png")   left center no-repeat, #36241b }
+        div.dice-10  { background: url("../../img/forum/dice10.png")  left center no-repeat, #36241b }
+        div.dice-12  { background: url("../../img/forum/dice12.png")  left center no-repeat, #36241b }
+        div.dice-20  { background: url("../../img/forum/dice20.png")  left center no-repeat, #36241b }
+        div.dice-100 { background: url("../../img/forum/dice100.png") left center no-repeat, #36241b }
+        div.letter-a { background: url("../../img/forum/lta.png")     left center no-repeat, #36241b }
+        div.letter-c { background: url("../../img/forum/ltc.png")     left center no-repeat, #36241b }
+        div.letter-v { background: url("../../img/forum/ltv.png")     left center no-repeat, #36241b }
+        div.rps      { background: url("../../img/forum/rps.png")     left center no-repeat, #36241b }
+        div.coin     { background: url("../../img/forum/coin.png")    left center no-repeat, #36241b }
+        div.card     { background: url("../../img/forum/card.png")    left center no-repeat, #36241b }
       }
     }
   }
