--- a/templates/ajax/soul/coalitions.html.twig
+++ b/templates/ajax/soul/coalitions.html.twig
@@ -269,7 +269,7 @@
 
                 fun_send_working = true;
 
-                $.ajax.no_loader().easySend( '{{ path('soul_shout_coalition') }}', {text: box.value},
+                $.ajax.no_loader().easySend( '{{ path('soul_shout_coalition') }}', {text: $.html.twinoParser.parseToString(box.value, s => [null,s])},
                     () => {
                         fun_refresh(true, () => {
                             box.value = '';
