--- a/templates/ajax/soul/coalitions.html.twig
+++ b/templates/ajax/soul/coalitions.html.twig
@@ -62,7 +62,7 @@
                 <h5>{{ 'Shoutbox der Koalition'|trans({},'soul') }}</h5>
                 <div class="row-flex">
                     <div class="cell padded-small grow-1">
-                        <label><input type="text" id="shoutbox_chat" /></label>
+                        <label><input type="text" id="shoutbox_chat" maxlength="256" /></label>
                     </div>
                     <div class="cell padded-small">
                         <button id="shoutbox_send">{{ 'Absenden'|trans({},'soul') }}</button>
