--- a/assets/less/intl.less
+++ b/assets/less/intl.less
@@ -89,3 +89,6 @@ html.lang-base-en .forum-post > .forum-post-content .modAnnounce, html.lang-base
 html.lang-base-fr .forum-post > .forum-post-content .modAnnounce, html.lang-base-fr .sun-editor-editable .modAnnounce, html.lang-base-fr #forum-editor-preview .modAnnounce, html.lang-base-fr #forum-editor-preview-global .modAnnounce, html.lang-base-fr #forum-editor-preview-answer .modAnnounce { background-image: url('../img/forum/modAnnounceBg_fr.png'); }
 html.lang-base-es .forum-post > .forum-post-content .modAnnounce, html.lang-base-es .sun-editor-editable .modAnnounce, html.lang-base-es #forum-editor-preview .modAnnounce, html.lang-base-es #forum-editor-preview-global .modAnnounce, html.lang-base-es #forum-editor-preview-answer .modAnnounce { background-image: url('../img/forum/modAnnounceBg_es.png'); }
 
+html.lang-base-en .soul .friend { background: url("../img/soul/refererHeart_en.png") no-repeat center top; }
+html.lang-base-fr .soul .friend { background: url("../img/soul/refererHeart_fr.png") no-repeat center top; }
+html.lang-base-es .soul .friend { background: url("../img/soul/refererHeart_es.png") no-repeat center top; }
