--- a/assets/less/modules/soul.less
+++ b/assets/less/modules/soul.less
@@ -141,6 +141,11 @@ div.tooltip.badge-tooltip {
         }
     }
 
+    .friend {
+      width: auto; height: 203px; position: relative; font-size: 0; background: url("../../img/soul/refererHeart.png") no-repeat center top;
+      background-size: contain; margin-top: -1px;
+    }
+
     .night {
         width: auto; height: 230px; position: relative; font-size: 0; background: url("../../img/soul/soul_night.jpg") no-repeat right top;
         background-size: cover; margin-top: -1px;
