Fix the town-create and town-select box

--- a/templates/ajax/ghost/create_town.html.twig
+++ b/templates/ajax/ghost/create_town.html.twig
@@ -7,7 +7,7 @@
 
 {% block ajax %}
     <div class="row form soul">
-        <div class="cell-small header rw-18 ro-3 rw-lg-20 ro-lg-2 rw-md-24 ro-md-0">
+        <div class="cell-small header rw-18 ro-3 rw-lg-20 ro-lg-2 rw-md-24 ro-md-0 edge-top-left">
             <div class="tabs">
                 <div class="tab-floater">
                     <div class="tab left inline">
