--- a/templates/ajax/ghost/intro.html.twig
+++ b/templates/ajax/ghost/intro.html.twig
@@ -2,7 +2,7 @@
 {% block title %}{{'Wiedergeburt: Wahl der Partie'|trans({}, 'ghost')|raw}}{% endblock %}
 {% block ajax %}
     <div class="row soul">
-        <div class="cell-small header rw-18 ro-3 rw-lg-20 ro-lg-2 rw-md-24 ro-md-0">
+        <div class="cell-small header rw-18 ro-3 rw-lg-20 ro-lg-2 rw-md-24 ro-md-0 edge-top-left">
             <div class="tabs">
                 <div class="tab-floater">
                     <div class="tab left inline">
