--- a/templates/ajax/game/game.html.twig
+++ b/templates/ajax/game/game.html.twig
@@ -15,7 +15,7 @@
     {% if rucksack is defined %}
         <ul class="rucksack {% if rucksack_size > 10 %}expanded{% endif %}">
             <li class="text">{{'Rucksack'|trans({}, 'game')}}</li>
-            {% for item in rucksack.items %}
+            {% for item in rucksack.items|sort((a,b) => b.essential <=> a.essential ?: b.prototype.sort <=> a.prototype.sort ?: a.prototype.id <=> b.prototype.id ) %}
                 {% embed "ajax/game/item.html.twig" with {'item': item, 'no_id': true} %}{% endembed %}
             {% endfor %}
             {% if rucksack.items|length < rucksack_size %}
