--- a/templates/ajax/game/town/home.html.twig
+++ b/templates/ajax/game/town/home.html.twig
@@ -149,7 +149,7 @@
             </div>
 
             <div class="padded cell rw-6 rw-md-12">
-                {% embed "ajax/game/inventory.html.twig" with {'size': rucksack_size, 'items': rucksack.items} %}
+                {% embed "ajax/game/inventory.html.twig" with {'size': rucksack_size, 'items': rucksack.items, 'sort': true} %}
                     {% block class %}rucksack{% endblock %}
                     {% block title %}{% trans from 'game' %}Rucksack{% endtrans %}{% endblock %}
                 {% endembed %}
